# vue-tauri-demo

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: builder.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
